src/iac/terraform-wiremock-mysql-spark-testrunner/terraformSecurityGroupTestrunner.tf
resource "aws_security_group" "testrunner" {
  name        = "Testrunner Security Group"
  description = "Testrunner Security Group"
  ingress {
    protocol  = "tcp"
    from_port = 22
    to_port   = 22
    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }
  egress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = [
      "0.0.0.0/0",
    ]
  }
  tags = {
    Name = "Testrunner Security Group"
  }
}
